# study-libevent

./: README.md
LibeventApp/: settings.gradle
LibeventApp/app/: CMakeLists.txt  build.gradle
LibeventApp/app/src/main/: AndroidManifest.xml
LibeventApp/app/src/main/cpp/: epoll.c  event-config.h  evutil.c  http.c  log.c
LibeventApp/app/src/main/cpp/libio/: config.h.in  io.c  io.h  io_config.h  io_method.c
LibeventApp/app/src/main/cpp/sample/: and_log.h  bufevent_client_demo.cpp  bufevent_server_demo.cpp  demo.cpp  demo.h  event-test.c  event-test.c_bak  libio_demo.cpp  main_jni.cpp  tailq_demo.cpp_bak
LibeventApp/app/src/main/java/com/heaven7/android/libeventapp/: MainActivity.java
LibeventApp/app/src/main/res/layout/: activity_main.xml
LibeventApp/app/src/main/res/values/: strings.xml
LibeventApp/gradle/wrapper/: gradle-wrapper.properties
